--- a/src/app/layout/component/app.topbar.html
+++ b/src/app/layout/component/app.topbar.html
@@ -4,8 +4,7 @@
             <i class="pi pi-bars"></i>
         </button>
         <a class="layout-topbar-logo" routerLink="/">
-            <img src="assets/logo.svg" alt="logo" style="height: 35px;">
-            <span>Tigin Teknoloji</span>
+            <img src="assets/tshift.svg" alt="logo" style="height: 35px;">
         </a>
     </div>
 
