android ayarları yapıldı

--- a/src/app/pages/vardiya/components/vardiya-listesi/vardiya-listesi.component.html
+++ b/src/app/pages/vardiya/components/vardiya-listesi/vardiya-listesi.component.html
@@ -765,25 +765,25 @@
                                 <!-- Nakit -->
                                 <div class="personel-stat">
                                     <div class="personel-stat-label">Nakit</div>
-                                    <div class="personel-stat-value">{{ item.pusulaDokum?.nakit |
+                                    <div class="personel-stat-value">{{ item.pusulaDokum.nakit |
                                         currency:'TRY':'symbol-narrow':'1.2-2' }}</div>
                                 </div>
                                 <!-- Kredi Kartı -->
                                 <div class="personel-stat">
                                     <div class="personel-stat-label">Kredi Kartı</div>
-                                    <div class="personel-stat-value">{{ item.pusulaDokum?.krediKarti |
+                                    <div class="personel-stat-value">{{ item.pusulaDokum.krediKarti |
                                         currency:'TRY':'symbol-narrow':'1.2-2' }}</div>
                                 </div>
                                 <!-- Paro Puan -->
                                 <div class="personel-stat">
                                     <div class="personel-stat-label">Paro Puan</div>
-                                    <div class="personel-stat-value">{{ item.pusulaDokum?.paroPuan |
+                                    <div class="personel-stat-value">{{ item.pusulaDokum.paroPuan |
                                         currency:'TRY':'symbol-narrow':'1.2-2' }}</div>
                                 </div>
                                 <!-- Mobil Ödeme -->
                                 <div class="personel-stat">
                                     <div class="personel-stat-label">Mobil Ödeme</div>
-                                    <div class="personel-stat-value">{{ item.pusulaDokum?.mobilOdeme |
+                                    <div class="personel-stat-value">{{ item.pusulaDokum.mobilOdeme |
                                         currency:'TRY':'symbol-narrow':'1.2-2' }}</div>
                                 </div>
                             </div>
@@ -829,13 +829,13 @@
                                     <td class="text-right text-muted-color">{{
                                         item.otomasyonToplam |
                                         currency:'TRY':'symbol-narrow':'1.2-2' }}</td>
-                                    <td class="text-right">{{ item.pusulaDokum?.nakit |
+                                    <td class="text-right">{{ item.pusulaDokum.nakit |
                                         currency:'TRY':'symbol-narrow':'1.2-2' }}</td>
-                                    <td class="text-right">{{ item.pusulaDokum?.krediKarti |
+                                    <td class="text-right">{{ item.pusulaDokum.krediKarti |
                                         currency:'TRY':'symbol-narrow':'1.2-2' }}</td>
-                                    <td class="text-right">{{ item.pusulaDokum?.paroPuan |
+                                    <td class="text-right">{{ item.pusulaDokum.paroPuan |
                                         currency:'TRY':'symbol-narrow':'1.2-2' }}</td>
-                                    <td class="text-right">{{ item.pusulaDokum?.mobilOdeme |
+                                    <td class="text-right">{{ item.pusulaDokum.mobilOdeme |
                                         currency:'TRY':'symbol-narrow':'1.2-2' }}</td>
                                     <td class="text-right font-bold">{{ item.pusulaToplam |
                                         currency:'TRY':'symbol-narrow':'1.2-2' }}</td>
