--- a/src/app/pages/vardiya/components/personel/personel-tanimlama.component.scss
+++ b/src/app/pages/vardiya/components/personel/personel-tanimlama.component.scss
@@ -1,4 +1,6 @@
-// Kullanıcı yönetimi için stil dosyası
+:host {
+    display: block;
+}
 
 // ============================================
 // DESKTOP STYLING
